# Workflow_CI_SML_Levi

./: pyproject.toml
.github/workflows/: build-model.yml
MLProject/: .gitignore  MLProject  Tautan Docker Hub.txt  modelling.py  utils.py
MLProject/weather_preprocessing/: pipeline.joblib
