[project]
name = "wotkflow-ci-mslml"
version = "0.1.0"
description = ""
authors = [
    {name = "Levi Rizki Saputra"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "mlflow (==2.22.1)",
    "dagshub (>=0.6.4,<0.7.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
